Fixed mainimage sizing on mobile devices

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -417,19 +417,9 @@ video {
   /* overflow: hidden; */
 }
 
-/* body { */
-
-/* height: 100vh; */
-
-/*  */
-
-/* } */
-
-/* ::-webkit-scrollbar { */
-
-/* display: none; */
-
-/* } */
+::-webkit-scrollbar {
+  display: none;
+}
 
 a {
   z-index: 0;
@@ -735,8 +725,8 @@ a {
   top: 33.333333%;
 }
 
-.bottom-10 {
-  bottom: 2.5rem;
+.bottom-5 {
+  bottom: 1.25rem;
 }
 
 .z-10 {
@@ -796,10 +786,6 @@ a {
   margin-bottom: 2.5rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
 }
@@ -808,12 +794,12 @@ a {
   margin-top: 7rem;
 }
 
-.mt-32 {
-  margin-top: 8rem;
-}
-
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .mt-6 {
@@ -842,6 +828,10 @@ a {
 
 .mt-12 {
   margin-top: 3rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .inline-block {
@@ -880,16 +870,12 @@ a {
   height: 20rem;
 }
 
-.h-10 {
-  height: 2.5rem;
+.h-40 {
+  height: 10rem;
 }
 
 .h-20 {
   height: 5rem;
-}
-
-.h-40 {
-  height: 10rem;
 }
 
 .h-14 {
@@ -918,10 +904,6 @@ a {
 
 .w-2\/3 {
   width: 66.666667%;
-}
-
-.w-80 {
-  width: 20rem;
 }
 
 .w-96 {
@@ -980,10 +962,6 @@ a {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1089,26 +1067,6 @@ a {
   background-color: rgb(74 64 54 / var(--tw-bg-opacity));
 }
 
-.bg-pink-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 207 232 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-}
-
 .p-4 {
   padding: 1rem;
 }
@@ -1123,6 +1081,11 @@ a {
   padding-bottom: 2rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1131,11 +1094,6 @@ a {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .pt-4 {
@@ -1444,32 +1402,28 @@ a {
     top: -4rem;
   }
 
-  .sm\:mt-32 {
-    margin-top: 8rem;
-  }
-
   .sm\:mt-16 {
     margin-top: 4rem;
   }
 
-  .sm\:block {
-    display: block;
+  .sm\:mt-32 {
+    margin-top: 8rem;
   }
 
   .sm\:h-44 {
     height: 11rem;
   }
 
-  .sm\:h-36 {
-    height: 9rem;
+  .sm\:h-80 {
+    height: 20rem;
   }
 
   .sm\:w-32 {
     width: 8rem;
   }
 
-  .sm\:w-60 {
-    width: 15rem;
+  .sm\:w-80 {
+    width: 20rem;
   }
 
   .sm\:gap-y-16 {
@@ -1489,12 +1443,6 @@ a {
   .sm\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
-  }
-
-  .sm\:block {
-    position: absolute;
-    height: 100%;
-    width: 100%;
   }
 }
 
